final fix for overflow

--- a/numerc/static/numerc/styles.css
+++ b/numerc/static/numerc/styles.css
@@ -109,16 +109,12 @@
 	--sansSerif: "avenir", "-apple-system", "BlinkMacSystemFont", "avenir next",  "segoe ui", "helvetica neue", "helvetica", "Ubuntu", "roboto", "noto", "arial", "sans-serif"; 
 	}
 /* global styles */
-	html {
-		overflow-x: hidden;
-		max-width: 100%;
-	}
 	* {
 		box-sizing: border-box;
-		text-rendering: optimizeSpeed;
+		/* text-rendering: optimizeSpeed; */
 	}
 	body {
-		overflow-x: hidden;
+		overflow-x: hidden !important;
 		font-family: var(--serif);
 		color: var(--textColor);
 		font-size: 0.9rem;
@@ -135,6 +131,7 @@
 		margin: 0;
 	}
 	article {
+		overflow-x: hidden;
 		padding: 0;
 		margin: 0;
 		/* background-color: var(--blackBG); */
@@ -572,6 +569,10 @@
 		font-size: 0.85rem;
 		text-align: left;
 		margin-top: 0;
+	}
+	section > p {
+		line-height: calc(1ex / 0.32);
+		margin: calc(0.7ex / 0.32) 0;
 	}
 	section h2 + p, 
 	section h3 + p, 
@@ -2449,7 +2450,7 @@
 		}
 		.section-nav ul li::marker {font-size: 0.6rem;}
 	}
-	@media (max-width: 1100px) {
+	@media (max-width: 1000px) {
 		nav {
 			display: none;
 		}
@@ -2461,14 +2462,7 @@
 			padding-bottom: 15vh;
 			z-index: 1;
 		}
-		main {
-			display: block;
-			grid-template-columns: none;
-		}
-		section {
-			margin: 2%;
-			padding: 0.5em 10vw;
-		}
+		main { display: block; }
 		pre {margin: 1px 0;}
     .sidenote,
     .marginnote {
@@ -2511,14 +2505,12 @@
 			transform:translateY(0%);
 			transform: translateX(-120%);
 		}
-	}
-	@media (max-width: 900px) {
-		div.compare {display: block;}
-	}
-	@media (max-width: 850px) {
-		div.content {padding: 0;}
-		section {padding: 1vw 2vw;}
-	}
-	@media (max-width: 500px) {
-		section {padding: 1vw 2vw}
+		html {overflow-x: hidden;}
+		main {
+			position: relative;
+			margin: 1vw;
+		}
+		section {
+			padding: 1vw 2vw;
+		}
 	}
